--- a/Report.ipynb
+++ b/Report.ipynb
@@ -1131,14 +1131,9 @@
    "source": [
     "The success rate that our classification model had at correctly predicting the match outcome from our training data was `57.21%`. This accuracy is only marginally more significant than a coin flip (ie. 50% chance) and is not enough such that we could recommend its use for predicting successful matches. \n",
     "\n",
-    "We were also interested in determining whether certain attributes contributed towards greater match success. As we saw in the Matrix of Parameter Comparisons in **2.4 Dataset Visualization**, there was not a significant correlation of `Minutes`, `Age`, `Height`, `Aces` with `Result`. This is further supported by "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " "
+    "We were also interested in determining whether certain attributes contributed towards greater match success. As we saw in the Matrix of Parameter Comparisons in *2.4 Dataset Visualization*, there was no significant correlation between the parameters `Minutes`, `Age`, `Height`, `Aces` with the final `Result`. This is further supported by the low accuracy of the classification model seen in *2.6 Classification Model Evaluation*.\n",
+    "\n",
+    "This would suggest that the parameters that determine successful matches go beyond `Minutes`, `Age`, `Height` and `Aces`. "
    ]
   },
   {
@@ -1152,7 +1147,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Going into this project our expectations were that certain attributes would contribute to greater success in tennis. For example, as mentioned earlier in this report - age could have been a key variable that determined success. However, given the fact that our model only performs slightly better than a coin flip (figure x) and more specifically the distributions of ages are almost identically distributed between winners and losers (figure y) it appears that our expected results and actual results are not in line with one another."
+    "Going into this project our expectations were that certain attributes would contribute to greater success in tennis. For example, as mentioned earlier in this report, age could have been a key variable that determined success. However, given the fact that our model only performs slightly better than a coin flip **(figure x)** and more specifically the distributions of ages are almost identically distributed between winners and losers (figure y) it appears that our expected results and actual results are not in line with one another."
    ]
   },
   {
