--- a/Report.ipynb
+++ b/Report.ipynb
@@ -96,7 +96,7 @@
     "\n",
     "The purpose of the study is to determine whether certain attributes contribute to greater competitive success by analyzing player and match information. In addition, this analysis will also verify the accuracy of hypothesis made by academic scholars. For example, according to Sports Mechanics journal, height significantly affects players' serve speed, which in turn boost their odds of winning<sup>2</sup>. Another common claim is that the \"prime\" age ranges from 27 to 31 in which players perform at their very peak<sup>3</sup>.\n",
     "\n",
-    "We hope to find the answers to these questions by analyzing a comprehensive dataset contains results from nearly 7,000 matches of the top 500 tennis players in different tournaments from 2017-2019. This dataset includes match lengths, winner and loser's dominant hands, ages, heights and their number of aces<sup>4</sup>. The selection of this attributes is based on the assumed low correlation between variables and the heated controversy surrounding their role in players' performance.\n",
+    "We hope to find the answers to these questions by analyzing a comprehensive dataset contains results from nearly 7,000 matches of the top 500 tennis players in different tournaments from 2017 to 2019. This dataset includes match lengths, winner and loser's dominant hands, ages, heights and their number of aces<sup>4</sup>. The selection of this attributes is based on the assumed low correlation between variables and the heated controversy surrounding their role in players' performance.\n",
     "\n"
    ]
   },
